# Traductor-Auto-LandOfSika

./: .env  .gitignore  .travis.yml  README.md  config.py  example_script_to_translate_all_xml_file.ps1  pyproject.toml  run.py  translate_xml_file.py
APITranslator/Translators/: DeepL.py
Exceptions/XmlManage/: Exceptions_XmlManage.py
LanguagesXmlFiles/1.4.6/EN/: Sika_All_EN.xml  Sika_ModuleStrings_EN.xml  Sika_Settlements_EN.xml
LanguagesXmlFiles/1.4.6/EN/ProgrammeTranslate_EN/: BaseOverhaul_All_EN.xml  QuestSystem_All_EN.xml  TheLandOfSika_All_EN.xml
LanguagesXmlFiles/1.4.6/FR/: Sika_All_FR.xml  Sika_New_ModuleStrings_FR.xml  Sika_Settlements_FR.xml
LanguagesXmlFiles/1.4.6/FR/ProgrammeTranslate_FR/: BaseOverhaul_All_FR.xml  PetSystem_All_FR.xml  QuestSystem_All_FR.xml  SettlementSelfBuild_All_FR.xml  StoryCamera_All_FR.xml  TheLandOfSika_All_FR.xml
LanguagesXmlFiles/1.4.6/FR/Sika_spcharacters_all_FR/: Sika_StoryCharacters_FR.xml
XmlManage/: XmlManager.py  XmlManager_TheLandOfSika.py
source/: Exceptions.py
source/APITranslator/: APITranslator.py  DeepL.py  __init__.py  _baseclass.py
source/FileManager/: DynamicVariablesFileManager.py
source/XmlManage/: XmlManager.py  XmlManager_TheLandOfSika.py
source/XmlManager/: TheLandOfSika.py  __init__.py  _baseclass.py
source/test/: XmlManagetTheLandOfSikaTest.py  xml_generic_the_land_of_sika.xml
